--- a/src/locales/jp.json
+++ b/src/locales/jp.json
@@ -21,6 +21,9 @@
   "summary6": "K＆Kハートスクールの「K＆K」は「看護とケア」または「心と体」の略で、知識と心の両方を育むという私たちの取り組みを象徴しています。このサイトの目標は、看護とケアを学ぶ人々を支援するために、試験を超えた教育を提供し、生涯にわたる価値観と思いやりを伝え、私たちの教育理念の根底にある友情とつながりの促進の原則を共有することでした。このプロジェクトでは、YouTube、Site Kit、RSS、Open Graphを使用して、ユーザーエクスペリエンスとサイトパフォーマンスの両方を改善しました。YouTubeの統合により、動画の埋め込みと視聴者のリーチの拡大が容易になり、Site KitはアナリティクスやSearch ConsoleなどのGoogleツールからWebサイトに直接分析情報を提供し、RSSフィードによりユーザーはコンテンツの更新を購読して最新情報を入手でき、Open Graphはソーシャルメディアでのコンテンツの共有を最適化して可視性とエンゲージメントを向上させました。",
   "summary7": "マクタハリ ベイ パークは日曜日も開いている病院で、広いキッズ エリアがあり、子供連れの親にとって便利な場所です。このサイトはユニークなデザインと魅力的な構造を備え、フロントエンドとバックエンドの側面が非常にきれいに開発されているため、非常にユーザー フレンドリーです。また、このサイトには Google マップが統合されており、正確で最新の地理データ、カスタマイズ オプション、他の Google サービスとのシームレスな統合など、さまざまなメリットがあります。使いやすいインターフェイス、リアルタイム データ、グローバルなリーチにより、ユーザーの信頼とエクスペリエンスが向上し、ローカル検索の可視性が向上し、ビジネスに SEO の優位性がもたらされます。",
   "summary8": "Zoff オンライン ストアは、簡単なナビゲーション、安全な支払いオプション、幅広い製品と迅速な配送を特徴とするシームレスなショッピング体験を提供するように設計されています。ユーザー フレンドリーさを重視したこのサイトは、デスクトップとモバイルの両方に最適化されており、顧客はどこからでも買い物ができます。このプロジェクトでは、GSAP、Google タグ マネージャー、Nginx を使用して、パフォーマンス、分析、ユーザー エンゲージメントを改善しました。GSAP は、ユーザー エクスペリエンスを向上させるために、スムーズで効率的なアニメーションを提供するために使用されました。Google タグ マネージャーは、サイト コードを変更せずにトラッキング コードとマーケティング タグの管理を簡素化するために使用されました。また、Nginx を使用して、高速で信頼性の高い Web サイト配信を保証するために、高性能の Web サービスと負荷分散を提供しました。",
+  "summary9": "東京の代官山と恵比寿にあるヘアサロン。ドライカット、パーマ、カラーリング、トリートメントを専門としています。このサロンは、大人の女性の自然な髪の美しさを高めることに焦点を当て、アロマセラピーによるホリスティックなアプローチを提供しています。リラックスできるフルフラットのシャンプーステーションを備えています。",
+  "summary10": "子供向けの絵本に特化した日本のブログ。書評、読書のおすすめ、サブスクリプションサービスの洞察を提供しています。質の高い絵本を探している親や教育者のためのリソースとして機能します。",
+  "summary11": "日本のフリーランサーや副業ワーカーをサポートするウェブサイト。ブログ、アフィリエイトマーケティング、SEO、Webデザインやビデオ編集などのフリーランスの機会に関する情報を提供します。また、WordPressの使用と収益化戦略に関するヒントも提供しています。",
   "Senior Full Stack Developer": "シニアフルスタック開発者",
   "Junior Full Stack Developer": "ジュニアフルスタック開発者",
   "Front-End Development": "フロントエンド開発",
@@ -33,6 +36,9 @@
   "K&K&H&School": "K&K&H&スクール",
   "Makuhari Bay Park": "幕張ベイパーク",
   "Zoff": "ゾフ",
+  "Moon Dragon": "ムーンドラゴン",
+  "Ehonnoneta": "絵本ノネタ",
+  "Free freemind": "絵本ノネタ",
   "Email": "メール",
   "Phone": "電話",
   "About me content": "私はフルスタック開発者として、約 6 年間 Web 開発に携わってきました。私は常にデザインを構築するのが好きだったので、フロントエンド Web 開発を学ぶという自発的な決断は、間違いなくこれまでで最も困難でありながら素晴らしい決断の 1 つでした。Web 開発プロジェクトに貢献し、個人的および職業上の課題を克服したことで、ソフトウェア開発業界でのキャリア目標を追求し続けるモチベーションがさらに高まりました。この旅で、時間と献身があれば何でも可能だと信じ、自分に優しくすることも学びました。この道が私をどこへ連れて行ってくれるのか楽しみでなりません。他の方法は考えられません。仕事をしていないときは、愛犬と一緒にハイキングをしたり、家族の料理本にあるすべてのレシピを試したり、新しい場所を見るのが大好きです。",
